@@ -1,6 +1,7 @@
 require 'test/unit'
 require 'resolv'
 require 'socket'
+require 'tempfile'
 
 class TestResolvAddr < Test::Unit::TestCase
   def test_invalid_ipv4_address
@@ -12,5 +13,17 @@ class TestResolvAddr < Test::Unit::TestCase
         assert_not_match(Resolv::IPv4::Regex, "#{i}.#{i}.#{i}.#{i}")
       end
     }
+  end
+
+  def test_invalid_byte_comment
+    bug9273 = '[ruby-core:59239] [Bug #9273]'
+    Tempfile.open('resolv_test_addr_') do |tmpfile|
+      tmpfile.print("\xff\x00\x40")
+      tmpfile.close
+      hosts = Resolv::Hosts.new(tmpfile.path)
+      assert_nothing_raised(ArgumentError, bug9273) do
+        hosts.each_address("") {break}
+      end
+    end
   end
 end
