@@ -1,3 +1,10 @@
+Sat Dec 21 22:55:03 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/resolv.rb (Resolv::Hosts#lazy_initialize): should not
+	  consider encodings in hosts file.  [ruby-core:59239] [Bug #9273]
+
+	* lib/resolv.rb (Resolv::Config.parse_resolv_conf): ditto.
+
 Sat Dec 21 22:51:51 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (fake.rb): fixed wrong RUBY_PLATFORM, to correctly
